--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.1.0",
     "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "~7.1.0",
