--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "keycloak-angular": "^6.1.0",
     "ng-pick-datetime": "^7.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
